# waste_classification

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  template.py
api/: app.py
config/: config.yaml
notebook/: trials.ipynb
src/wasteClassification/: __init__.py
src/wasteClassification/components/: data_ingestion.py  model.py  model_eval.py  training.py
src/wasteClassification/config/: __init__.py
src/wasteClassification/constants/: __init__.py
src/wasteClassification/entity/: __init__.py
src/wasteClassification/pipeline/: data_ingestion_pipeline.py  model_eval_pipeline.py  model_training_pipeline.py
src/wasteClassification/utils/: __init__.py
templates/: index.html
