[project]
name = "wasteClassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ensure>=1.0.4",
    "gdown>=6.1.0",
    "joblib>=1.5.3",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "setuptools>=82.0.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
